# AI-Based-color-combination-recommendation-system-updated

./: README.md  outfit-color-advisor.html  start.sh
backend/: main.py  pyproject.toml  requirements.txt  start.sh
frontend/: .env.example  index.html  package.json  start.sh  tailwind.config.js
frontend/src/: App.jsx  main.jsx
frontend/src/components/: ColorCard.jsx  Header.jsx  ImageUpload.jsx  LoadingSpinner.jsx  OutfitPreview.jsx  PaletteSection.jsx  Results.jsx  SavedPalettes.jsx  SwatchDot.jsx
frontend/src/context/: AuthContext.jsx
frontend/src/pages/: HomePage.jsx  LoginPage.jsx  SignupPage.jsx
frontend/src/styles/: index.css
frontend/src/utils/: api.js  colors.js
