[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "outfit-color-studio-backend"
version = "2.0.0"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "python-multipart>=0.0.12",
    "Pillow>=11.0.0",
    "numpy>=2.1.0",
    "scikit-learn>=1.5.2",
    "python-dotenv>=1.0.1",
]

[tool.setuptools.packages.find]
where = ["."]
